# bestiary-autoencoders

./: .gitignore  README.md  pyproject.toml
bestiary/: callbacks.py  data.py  mnist.py  models.py
