[tool.poetry]
name = "bestiary-autoencoders"
version = "0.1.0"
description = "A bestiary of autoencoders"
authors = ["Bastian Rieck <bastian.rieck@bsse.ethz.ch>"]

[tool.poetry.dependencies]
python = ">=3.8"
torch = "^1.7.1"
pytorch-lightning = "^1.2.1"
torchvision = "^0.8.2"
matplotlib = "^3.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
